--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link href="https://aufbau-website.de/craft/web/CSSundJS/stylevorgaben.css" rel="stylesheet" />
-  {% if  craft.mobileDetect.isMobile %}   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS_mobile.css" rel="stylesheet" />   {% endif %}
-  {% if  craft.mobileDetect.isMobile == false %}   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />   {% endif %}
+  <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -26,9 +25,8 @@
   {% block headerbildPosition1 %} {% endblock %}
 
 
-  {% if  craft.mobileDetect.isMobile %}   {% include "_layouts/navbar-mobile" %}  {% endif %}
 
-  {% if  craft.mobileDetect.isMobile == false %}   {% include "_layouts/navbar" %} {% endif %}
+{% include "_layouts/navbar" %}
 
 
 
