--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -6,8 +6,8 @@
   <div class="container achterspaltenlayout" style="padding: 0px;">
 
     <!-- Chance Logo -->
-    <a class="navbar-brand" id="logo" href="https://aufbau-website.de/craft/web/">
-      <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="80" height="60">
+    <a class="navbar-brand"  href="https://aufbau-website.de/craft/web/">
+      <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logo" alt="Logo" width="160" height="120">
     </a>
 
 
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="https://aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
+          <a class="nav-link" id="home" href="https://aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
         </li>
         <div class="dropdown">
 
@@ -193,10 +193,10 @@
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" href="https://aufbau-Website.de/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" id="blog" href="https://aufbau-Website.de/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://aufbau-Website.de/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
+          <a class="nav-link" id="kontakt" href="https://aufbau-Website.de/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
         </li>
 
       </ul>
