--- a/templates/craft_sicherungWebsite/templates/spenden/index.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/index.html
@@ -111,10 +111,10 @@
         <div class="card-header bg-white">
         <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
           <div class="row">
-            <div class="col-11">
+            <div class="col-md-11 col-10">
               <h4> {{ entry.title }} </h4>
             </div>
-            <div class="col-1">
+            <div class="col-md-1 col-2">
               <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
             </div>
           </div>
