--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -173,11 +173,32 @@
         <div id="anleser"> {{ entry.anleser }}    </div>
       </div>
       <div class="col-sm-6">
-        <form class="form-inline" action="/action_page.php" style="padding-bottom: 20px;">
-         <input type="email" class="form-control" placeholder=" Ihre E-Mail-Adresse" style="margin-right: 30px; padding-right: 60px;">
-         <button type="submit" class="btn btn-primary">Anmelden</button>
-       </form>
-       <div id="copy"> {{ entry.zusatzfeld2 }} </div>
+        {% macro errorList(errors) %}
+        {% if errors %}
+        <ul class="errors">
+          {% for error in errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+        {% endmacro %}
+
+        {% from _self import errorList %}
+
+        <form class="form-inline" method="post" action="" accept-charset="UTF-8">
+          {{ csrfInput() }}
+          <input type="hidden" name="action" value="contact-form/send">
+          {{ redirectInput('contact/thanks') }}
+
+          <input id="from-email" required class="form-control" type="email" style="margin-right: 1rem; padding-right: 3rem;" name="fromEmail" placeholder="Ihre E-Mail-Adresse" value="{{ message.fromEmail ?? '' }}">
+          {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
+          <input type="submit" value="Anmelden" class="btn btn-primary">
+
+          <textarea style="display: none;" rows="10" cols="40" id="message" name="message">Die oben genannte E-Mail-Adresse würde sich gerne für den Newsletter anmelden.</textarea>
+          {{ message is defined and message ? errorList(message.getErrors('message')) }}
+
+        </form>
+       <div id="copy" style="padding-top: 1rem;"> {{ entry.zusatzfeld2 }} </div>
       </div>
     </div>
   </div>
