--- a/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -2,7 +2,7 @@
 {% extends "_layouts/layoutHome.html" %}
 
 {% block titelfuerseo %}
-{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('kinderpate').one() %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('kinderpaten').one() %}
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
 
