--- a/templates/craft_sicherungWebsite/templates/spenden/index.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/index.html
@@ -22,52 +22,69 @@
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-bottom: 4rem;">
     {% set entry = craft.entries.section('spenden').slug('spende').one() %}
       <h1 style="padding-bottom: 30px;"> {{ entry.title }} </h1>
-      <div id="anleser"> {{ entry.anleser }}  </div>
+      <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}  </div>
+      <a href="https://aufbau-website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
     </div>
   </div>
 
 
 
-  <div class="container zwoelferspaltenlayout">
-    <div class="card-deck">
-
-    <div class="card" style="padding: 1.5rem; background-image: url({{ entry.bild.one().url }});">
-      <img class="card-img-top mx-auto d-block"  src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}" alt="Card image"
-      style="max-height: 160px; max-width: 160px;">
-      <h3 style="color: white; padding-top: 2rem;"> {{ entry.text }} </h3>
-      <div id="copy" style="color: white"> {{ entry.zusatzfeld2 }}  </div>
-      <div class="row text-center">
-        <div class="col-lg-1"> </div>
-      <div class="col-lg-4" style="margin-right: -3%; ">
-        <a href="https://aufbau-website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html" class="btn btn-primary" role="button">Regelmäßig Spenden</a>
-      </div>          <div class="col-lg-2"> <br> </div>
-      <div class="col-lg-4">
-        <a href="https://aufbau-website.de/craft/web/spenden/allgemein/einmaligallgemein.html" class="btn btn-primary" role="button">Einmalig Spenden</a>
-      </div>         <div class="col-lg-1"> </div>
-    </div> <br>
+  <div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }});">
+    {% set entry = craft.entries.section('spenden').slug('pate-werden').one() %}
+    <div class="row">
+      <div class="col-sm-1"> </div>
+      <div class="col-sm-3">
+      <img src="{{ entry.bild.one().url }}" style="float: right">
+      </div>
+      <div class="col-sm-6">
+        <h3 style="color: white;"> {{ entry.title }} </h3>
+        <span id="copy" style="color: white;"> {{ entry.anleser }} </span>
+        <a style="margin-bottom: 3rem;" href="https://aufbau-website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html" class="btn btn-primary" role="button">Jetzt Pate werden</a>
+      </div>
+      <div class="col-sm-2"> </div>
     </div>
+</div> <!-- container-fluid von jetzt pate werden -->
 
-    <div class="card" style="padding: 1.5rem; background-image: url({{ entry.bild.one().url }});">
-      <img class="card-img-top mx-auto d-block"  src="  {% if entry.bild3.one() is not null %}  {{ entry.bild3.one().getUrl() }}  {% endif %}" alt="Card image"
-      style="max-height: 160px; max-width: 160px;">
-      <h3 style="padding-top: 2rem; color: white"> {{ entry.zusatzfeld1 }} </h3>
-      <div id="copy" style="color: white"> {{ entry.zusatzfeld3 }}  </div> <br>
-      <div class="row text-center">
-        <div class="col-lg-1"> </div>
-      <div class="col-lg-4" style="margin-right: -3%; ">
-        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig" class="btn btn-primary" role="button">Regelmäßig Spenden</a>
-      </div>          <div class="col-lg-2"> <br> </div>
-      <div class="col-lg-4">
-        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" class="btn btn-primary" role="button">Einmalig Spenden</a>
-      </div>         <div class="col-lg-1"> </div>
-    </div> <br>
-    </div>
-  </div> <!-- Die zwei Spendenboxen -->
+    <div class="container achterspaltenlayout text-center" style="padding-top: 3rem;">
+        {% set entry = craft.entries.section('spenden').slug('eine-spende').one() %}
+        <h2> {{ entry.title }} </h2>
+        <div id="copy"> {{ entry.anleser }}</div>
 
-</div> <!-- zwoelferspaltenlayout-container -->
+        {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
+
+        <div id="accordion">
+          {% set entries = entry.children().all() %}
+          {% if entries | length %}        {% set counter = 0 %}
+          {% for entry in entries %} {% set counter = counter + 1 %}
+          <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
+            <div class="card-header bg-white">
+            <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
+              <div class="row">
+                <div class="col-md-11 col-10">
+                  <h4> {{ entry.title }} </h4>
+                </div>
+                <div class="col-md-1 col-2">
+                  <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
+                </div>
+              </div>
+            </a>
+              </div>
+              <div id="{{counter}}" class="collapse" data-parent="#accordion">
+                <div class="card-body" id="copy">
+                  {{ entry.text }}
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+
+      </div> <!-- Akkordion -->
+
+
 
 <div class="container achterspaltenlayout" style="padding-top: 2rem;">
   {% set entry = craft.entries.section('spenden').slug('spendenmultiplikator').one() %}
@@ -100,42 +117,5 @@
   </div>
 </div> <!-- Die zwei Boxen mit Spenden/Schenken & Einkaufen/Spenden -->
 
-<div class="container achterspaltenlayout">
-  <div class="text-center">
-    {% set entry = craft.entries.section('spenden').slug('eine-spende').one() %}
-    <h2> {{ entry.title }} </h2>
-    <div id="copy"> {{ entry.anleser }}</div>
 
-    {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
-
-    <div id="accordion">
-      {% set entries = entry.children().all() %}
-      {% if entries | length %}        {% set counter = 0 %}
-      {% for entry in entries %} {% set counter = counter + 1 %}
-      <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
-        <div class="card-header bg-white">
-        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-          <div class="row">
-            <div class="col-md-11 col-10">
-              <h4> {{ entry.title }} </h4>
-            </div>
-            <div class="col-md-1 col-2">
-              <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
-            </div>
-          </div>
-        </a>
-          </div>
-          <div id="{{counter}}" class="collapse" data-parent="#accordion">
-            <div class="card-body" id="copy">
-              {{ entry.text }}
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-        {% endif %}
-      </div>
-
-  </div>
-
-</div>
 {% endblock %}
